# JacekLib

./: .gitignore  CMakeLists.txt  README.md  test.cpp
inc/: ansi.hpp  check.hpp  main.hpp  main_impl.hpp  matrix.hpp  print.hpp  require.hpp  type_defs.hpp  types.hpp  utils.hpp
inc/jac/: ansi.hpp  b64_string.hpp  check.hpp  data_ptr.hpp  debug.hpp  main.hpp  main_impl.hpp  matrix.hpp  print.hpp  properties.hpp  random.hpp  require.hpp  type_defs.hpp  utils.hpp
inc/jac/impl/: debug.hpp
src/: check.cpp  main_impl.cpp  print.cpp  require.cpp
src/jac/: main_impl.cpp  print.cpp  random.cpp
tst/: print.cpp  test.cpp
